# mkv-muxing-batch-gui

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  TODO.txt  main.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
Resources/Languages/: iso639_language_list.json
Resources/Languages/nppBackup/: iso639_language_list.json.2026-05-31_030800.bak
Resources/Tools/: Readme.txt
Resources/Tools/Linux/: Readme.txt
Resources/Tools/Other Systems/: Readme.txt
Resources/Tools/Windows64/: Readme.txt
